# phyphox-micropython

./: LICENSE.txt  README.md  ble_advertising.py  createExperiment.py  getDataFromSmartphone.py  main.py  phyphoxBLE.py  phyphoxBLE_ESP32.py  phyphoxBleExperiment.py  setup.cfg  setup.py  test.py
XML/: Data Test (1).phyphox  Write Test.phyphox
examples/: createExperiment.py  getDataFromSmartphone.py  randomNumbers.py
phyphox/: __init__.py  ble_advertising.py  phyphoxBLE.py  phyphoxBleExperiment.py
phyphoxBLE/: __init__.py  experiment.py  phyphoxBLE.py  phyphoxBLEExperiment.py
