[metadata]
name = phyphoxBLE
version = 0.1.1
author = phyphox / RWTH Aachen University
author_email = contact@phyphox.org
description = Use phyphox to plot sensor data from your Microcontroller.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/phyphox/phyphox-micropython
project_urls =
	phyphox = https://phyphox.org
keywords = BLE, Bluetooth, phyphox, plotting, smartphone
license = GNU Lesser General Public License 3.0
classifiers =
	Programming Language :: Python :: 3
	Programming Language :: Python :: Implementation :: MicroPython

[options]
packages = phyphoxBLE

